--- a/sugar.css
+++ b/sugar.css
@@ -174,6 +174,10 @@ ul li a:active{
     clear: left;
 }
 
+.p-explanation{
+    overflow: visible;
+}
+
 section div img{
     border-radius: 8px;
 }
@@ -224,7 +228,7 @@ body div aside div ul li{
 #widget-text{
     color: #009EF3;
     background-color: #b4e0fa;
-    background: skyblue;
+    /* background: skyblue; */
     padding: 2px 5px;
 }
 
